その３の追加

--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -6,3 +6,4 @@ price: 200                          # 有料の場合200〜5000
 chapters:
   - 01_uefi_boot-1                  # チャプター1
   - 02_uefi_boot-2                  # チャプター2
+  - 03_uefi_boot-3                  # チャプター3
