例外ハンドラの実装

--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -7,3 +7,4 @@ chapters:
   - 01_uefi_boot-1                  # チャプター1
   - 02_uefi_boot-2                  # チャプター2
   - 03_uefi_boot-3                  # チャプター3
+  - 03_uefi_boot-4                  # チャプター4
