--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -11,3 +11,4 @@ chapters:
   - 05_uefi_put_fb-1                # チャプター5
   - 06_uefi_put_fb-2                # チャプター6
   - 07_uefi_keyin-1                 # チャプター7
+  - 08_uefi_keyin-2                 # チャプター8
