チャプター追加

--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -12,3 +12,4 @@ chapters:
   - 06_uefi_put_fb-2                # チャプター6
   - 07_uefi_keyin-1                 # チャプター7
   - 08_uefi_keyin-2                 # チャプター8
+  - 09_uefi_keyin-3                 # チャプター8
