タイマの実装

--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -15,3 +15,4 @@ chapters:
   - 09_uefi_keyin-3                 # チャプター9
   - 10_uefi_mouse                   # チャプター10
   - 11_uefi_timer-1                 # チャプター11
+  - 12_uefi_timer-2                 # チャプター12
