--- a/books/play_with_uefi_in_long_mode/config.yaml
+++ b/books/play_with_uefi_in_long_mode/config.yaml
@@ -16,3 +16,5 @@ chapters:
   - 10_uefi_mouse                   # チャプター10
   - 11_uefi_timer-1                 # チャプター11
   - 12_uefi_timer-2                 # チャプター12
+  - 13_uefi_disk                    # チャプター13
+
